2005-09-19  Jim Evins  <evins@snaught.com>

	* data/glade/property-bar.glade:
		Remove items from font_family_combo.  This prevents the
		double entry after adding text model and list of fonts.
	* src/ui-property-bar.c: (reset_to_default_properties):
		Free font_family_list.

2005-07-01  Jim Evins  <evins@snaught.com>

	* po/it.po:
		Updated italian translation (Daniele Medri)

2005-06-26  Jim Evins  <evins@snaught.com>

	* docs/libglabels/libglabels-decl-list.txt:
		Somehow never got checked in before.
	* docs/libglabels/libglabels.types:
		Removed -- don't need it afterall.

2005-06-20  Jim Evins  <evins@snaught.com>

	* NEWS:
		Final prep for 2.1.1 release.

2005-06-20  Jim Evins  <evins@snaught.com>

	* configure.in:
		Final preps for 2.1.1 release.
	* docs/libglabels/libglabels.types:
		Somehow never got checked in before.
	* po/POTFILES.in:
		Bring up-to-date with recent reorg of ui code.
		

2005-06-19  Jim Evins  <evins@snaught.com>

	* src/template-designer.c: (construct_layout_page):
		Removed attempt to match background color of mini preview widget to
		background.

2005-06-17  Jim Evins  <evins@snaught.com>

	* help/C/figures/merge-ex2-4.png:
	* help/C/glabels.xml:
		Fixed spelling error.

2005-06-13  Jim Evins  <evins@snaught.com>

	* help/C/figures/merge-ex1-1.png:
	* help/C/figures/merge-ex1-2.png:
	* help/C/figures/merge-ex1-3.png:
	* help/C/figures/merge-ex1-4.png:
	* help/C/figures/merge-ex2-1.png:
	* help/C/figures/merge-ex2-2.png:
	* help/C/figures/merge-ex2-3.png:
	* help/C/figures/merge-ex2-4.png:
		Added figures for document merge tutorial.
	* help/C/glabels.xml:
		Added document merge tutorial.

2005-05-19  Jim Evins  <evins@snaught.com>

	* data/glade/merge-properties-dialog.glade:
		Fixed irregular spacing.
	* src/merge-properties-dialog.c: (gl_merge_properties_dialog_init),
	(gl_merge_properties_dialog_construct):
		Set outer padding and remove separator.

2005-05-18  Jim Evins  <evins@snaught.com>

	* src/hig.h:
	* src/hig.c: