@@ -1,3 +1,11 @@
+2005-10-22  Jim Evins <evins@snaught.com>
+
+	* src/glabels.c: (main):
+	* src/splash.c: (gl_splash):
+		Removed some small memory leaks.
+	* gtk-doc.make:
+		Added.
+	
 2005-09-19  Jim Evins  <evins@snaught.com>
 
 	* data/glade/property-bar.glade:
